--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
 <head>
-    <link rel="icon" href="media/logo.jpg" type="image/jpg">
+    <link rel="icon" href="logo.jpg" type="image/jpg">
     <title>Music Website by Mahesh Babar</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <div class="navbar">
-            <img src="media/logo.jpg" class="logo">
+            <img src="logo.jpg" class="logo">
             <ul>
                 <li><a href="#">HOME</a></li>
                 <li><a href="#">ABOUT</a></li>
@@ -22,13 +22,13 @@
             </div>
             <div class="right-col">
                 <h4>Click Here To Listen</h4>
-                <img src="media/play.png" id="icon">
+                <img src="play.png" id="icon">
             </div>
         </div>
     </div>
 
     <audio id="mySong">
-        <source src="media/song.mp4" type="audio/mp4">
+        <source src="song.mp4" type="audio/mp4">
     </audio>
 
     <script>
@@ -37,10 +37,10 @@
         icon.onclick = function(){
             if(mySong.paused){
                 mySong.play();
-                icon.src = "media/pause.png";
+                icon.src = "pause.png";
             }else{
                 mySong.pause();
-                icon.src = "media/play.png";
+                icon.src = "play.png";
             }
         }
     </script>
